# email-verification-client

./: README.md  pyproject.toml
email_verification_client/: main.py
tests/: test_client.py
